Add compiler option to increase device name length

--- a/config/prj.conf
+++ b/config/prj.conf
@@ -7,3 +7,4 @@ CONFIG_HID_CONSUMER=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 CONFIG_Z_DEVICE_MAX_NAME_LEN=64
+CONFIG_COMPILER_OPT="-DZ_DEVICE_MAX_NAME_LEN=96"
