Refactor ZMK firmware build workflow
Updated the GitHub Actions workflow for building ZMK firmware. Changes include renaming steps, modifying build configurations, and adjusting artifact upload settings.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,132 +1,76 @@
-name: ZMK Build (Stable Direct Config + Z_DEVICE_MAX_NAME_LEN Fix)
+name: Build ZMK Firmware
 
 on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:stable
-    permissions:
-      contents: read
-
     steps:
-      - name: ⬇️ Checkout Repository
+      - name: 🧹 Checkout Repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: ⚙️ Fix Git Dubious Ownership
-        shell: bash
+      - name: ⚙️ Configure Git Safe Directory
         run: git config --global --add safe.directory $GITHUB_WORKSPACE
 
-      - name: 🧩 Log ZMK & Zephyr Versions
-        shell: bash
+      - name: 🧱 Setup Zephyr SDK
+        uses: zmkfirmware/zmk-build-action@v1
+        with:
+          build-dir: zmk_workspace
+          west-init-extra-args: --mr v0.3
+          zephyr-version: v3.5.0+zmk-fixes
+
+      - name: 🧩 Preflight Overlay Validation
+        run: |
+          echo "=== Checking DTS syntax ==="
+          DTS_FILE="zmk_workspace/app/nice_nano_v2.overlay"
+          if [ ! -f "$DTS_FILE" ]; then
+            echo "❌ Overlay file missing: $DTS_FILE"
+            exit 1
+          fi
+          grep -E 'compatible|map|row-gpios|col-gpios' "$DTS_FILE" || true
+          dtc -I dts -O dtb -o /tmp/test.dtb "$DTS_FILE" 2>&1 | tee dts_check.log || {
+            echo "❌ DTS parse failed! See dts_check.log"
+            exit 1
+          }
+
+      - name: 🪶 Patch Device Name Limit
+        run: |
+          DEVICE_H="zmk_workspace/zephyr/include/zephyr/device.h"
+          echo "=== Checking device.h ==="
+          grep -q "Z_DEVICE_MAX_NAME_LEN" "$DEVICE_H" && \
+          sed -i 's/#define Z_DEVICE_MAX_NAME_LEN .*/#define Z_DEVICE_MAX_NAME_LEN 128/' "$DEVICE_H"
+          grep Z_DEVICE_MAX_NAME_LEN "$DEVICE_H"
+
+      - name: 🧰 Build Firmware
         run: |
           set -e
-          echo "=== ZMK & Zephyr Version Info ==="
-          git rev-parse HEAD
-          git branch --show-current
-          git submodule foreach 'echo $path `git rev-parse HEAD`'
-          if command -v west &> /dev/null; then
-            west manifest --freeze || true
-          fi
+          echo "=== Environment ==="
+          echo "PWD: $(pwd)"
+          echo "ZMK Root: $ZMK_ROOT"
+          echo "=== Starting build ==="
+          west build -b nice_nano_v2 -p always app -- -DOVERLAY_CONFIG=prj.conf | tee build_output.log
+        env:
+          ZMK_ROOT: ${{ github.workspace }}/zmk_workspace
 
-      - name: 🚀 Setup, Patch, Build, and Log
-        id: build_run
-        shell: bash
+      - name: ✅ Verify Build Artifacts
         run: |
-          set -e
-          ZMK_REVISION="v0.3"
-          ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone"
-          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
-          CONFIG_DIR="$GITHUB_WORKSPACE/config"
-          BOARD_NAME="nice_nano_v2"
-          LOG_FILE="$GITHUB_WORKSPACE/build_debug.log"
-
-          echo "🔧 Setting up workspace..." | tee -a $LOG_FILE
-          git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR" | tee -a $LOG_FILE
-          mkdir -p "$ZMK_ROOT"
-          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT" | tee -a $LOG_FILE
-
-          cd "$ZMK_ROOT"
-          west update | tee -a $LOG_FILE
-
-          echo "🩹 Patching Zephyr device name length limit..." | tee -a $LOG_FILE
-          DEVICE_H_PATH="$ZMK_ROOT/zephyr/include/zephyr/device.h"
-          if [ -f "$DEVICE_H_PATH" ]; then
-            echo "✅ Found $DEVICE_H_PATH" | tee -a $LOG_FILE
-            echo "🔍 Before patch:" | tee -a $LOG_FILE
-            grep Z_DEVICE_MAX_NAME_LEN "$DEVICE_H_PATH" || echo "(none found)" | tee -a $LOG_FILE
-
-            sed -i 's/#define Z_DEVICE_MAX_NAME_LEN .*/#define Z_DEVICE_MAX_NAME_LEN 128/' "$DEVICE_H_PATH"
-
-            echo "🔍 After patch:" | tee -a $LOG_FILE
-            grep Z_DEVICE_MAX_NAME_LEN "$DEVICE_H_PATH" | tee -a $LOG_FILE
-            echo "✅ Patch applied successfully." | tee -a $LOG_FILE
-          else
-            echo "❌ device.h not found! Zephyr may not have been fetched correctly." | tee -a $LOG_FILE
-            ls -R "$ZMK_ROOT/zephyr" || true | tee -a $LOG_FILE
+          echo "=== Verifying artifacts ==="
+          ls -lh zmk_workspace/build/zephyr || true
+          if [ ! -f "zmk_workspace/build/zephyr/zmk.uf2" ]; then
+            echo "❌ Firmware (.uf2) not found!"
+            echo "Here’s a quick look at the last 20 lines of build_output.log:"
+            tail -n 20 build_output.log
+            exit 1
           fi
+          echo "✅ Firmware found and ready."
 
-          # Copy configuration files
-          mkdir -p "$ZMK_ROOT/app"
-          cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app"
-          cp "$CONFIG_DIR/$BOARD_NAME.keymap" "$ZMK_ROOT/app/" || true
-          cp "$CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/" || true
-
-          echo "--- DUMPING $BOARD_NAME.overlay ---" | tee -a $LOG_FILE
-          cat -n "$ZMK_ROOT/app/$BOARD_NAME.overlay" || echo "(no overlay found)" | tee -a $LOG_FILE
-          echo "----------------------------------" | tee -a $LOG_FILE
-
-          echo "🌿 Sourcing Zephyr environment..." | tee -a $LOG_FILE
-          . "$ZMK_ROOT/zephyr/zephyr-env.sh"
-
-          echo "⚙️ Starting west build..." | tee -a $LOG_FILE
-          west build -b "$BOARD_NAME" "$ZMK_ROOT/app" --pristine 2>&1 | tee -a $LOG_FILE || echo "❌ Build failed" | tee -a $LOG_FILE
-
-          echo "🔍 Checking for firmware artifacts..." | tee -a $LOG_FILE
-          find "$ZMK_ROOT/build/zephyr" -maxdepth 1 -type f -printf '%f\n' | tee -a $LOG_FILE
-
-          if [ -f "$ZMK_ROOT/build/zephyr/zmk.uf2" ]; then
-            echo "FIRMWARE_PATH=$ZMK_ROOT/build/zephyr/zmk.uf2" >> $GITHUB_ENV
-            echo "BUILD_STATUS=0" >> $GITHUB_ENV
-          elif [ -f "$ZMK_ROOT/build/zephyr/zmk.hex" ]; then
-            echo "FIRMWARE_PATH=$ZMK_ROOT/build/zephyr/zmk.hex" >> $GITHUB_ENV
-            echo "BUILD_STATUS=0" >> $GITHUB_ENV
-          elif [ -f "$ZMK_ROOT/build/zephyr/zmk.bin" ]; then
-            echo "FIRMWARE_PATH=$ZMK_ROOT/build/zephyr/zmk.bin" >> $GITHUB_ENV
-            echo "BUILD_STATUS=0" >> $GITHUB_ENV
-          else
-            echo "BUILD_STATUS=1" >> $GITHUB_ENV
-            echo "❌ No firmware artifact found!" | tee -a $LOG_FILE
-          fi
-
-      - name: 💾 Upload Build Debug Logs
-        if: always()
+      - name: 📦 Upload Firmware Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build-debug-logs
-          path: ${{ github.workspace }}/build_debug.log
-          retention-days: 2
-
-      - name: 💾 Upload Devicetree Debug Logs (on failure)
-        if: env.BUILD_STATUS == '1'
-        uses: actions/upload-artifact@v4
-        with:
-          name: devicetree-debug
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zephyr.dts*
-          retention-days: 2
-
-      - name: ⬆️ Upload Firmware (on success)
-        if: env.BUILD_STATUS == '0'
-        uses: actions/upload-artifact@v4
-        with:
-          name: zmk-firmware
-          path: ${{ env.FIRMWARE_PATH }}
-          retention-days: 5
+          name: zmk_firmware
+          path: zmk_workspace/build/zephyr/zmk.uf2
